--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
+.firebase
+.firebaserc
+firebase.json
 
 # testing
 /coverage
@@ -12,11 +15,7 @@
 /build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
 
 npm-debug.log*
 yarn-debug.log*
